working no checks at start up input_status in main.js to be improved

--- a/ pi-webserver/htdocs/index.html
+++ b/ pi-webserver/htdocs/index.html
@@ -283,7 +283,7 @@
 						</div>
 						<div class="input_table_row">
 							<div class="input_table_col" style="">
-								<div class="input_table_col_el">
+								<div id="input_maker_1" class="input_table_col_el">
 									&#923;
 								</div>
 								<div class="input_table_col_el">
@@ -291,7 +291,7 @@
 								</div>
 							</div>
 							<div class="input_table_col">
-								<div class="input_table_col_el">
+								<div id="input_maker_2" class="input_table_col_el">
 									&#923;
 								</div>
 								<div class="input_table_col_el">
@@ -299,7 +299,7 @@
 								</div>
 							</div>
 							<div class="input_table_col" style="">
-								<div class="input_table_col_el">
+								<div id="input_maker_3" class="input_table_col_el">
 									&#923;
 								</div>
 								<div class="input_table_col_el">
@@ -307,7 +307,7 @@
 								</div>
 							</div>
 							<div class="input_table_col" style="">
-								<div class="input_table_col_el">
+								<div id="input_maker_4" class="input_table_col_el">
 									&#923;
 								</div>
 								<div class="input_table_col_el">
@@ -315,7 +315,7 @@
 								</div>
 							</div>
 							<div class="input_table_col" style="">
-								<div class="input_table_col_el">
+								<div id="input_maker_5" class="input_table_col_el">
 									&#923;
 								</div>
 								<div class="input_table_col_el">
@@ -323,7 +323,7 @@
 								</div>
 							</div>
 							<div class="input_table_col" style="">
-								<div class="input_table_col_el">
+								<div id="input_maker_6" class="input_table_col_el">
 									&#923;
 								</div>
 								<div class="input_table_col_el">
@@ -331,7 +331,7 @@
 								</div>
 							</div>
 							<div class="input_table_col" style="">
-								<div class="input_table_col_el">
+								<div id="input_maker_7" class="input_table_col_el">
 									&#923;
 								</div>
 								<div class="input_table_col_el">
@@ -339,7 +339,7 @@
 								</div>
 							</div>
 							<div class="input_table_col" style="">
-								<div class="input_table_col_el">
+								<div id="input_maker_8" class="input_table_col_el">
 									&#923;
 								</div>
 								<div class="input_table_col_el">
